@@ -77,10 +77,19 @@ void Pothos::BufferChunk::_decrNextBuffers(void)
 static auto managedBufferChunk = Pothos::ManagedClass()
     .registerConstructor<Pothos::BufferChunk>()
     .registerConstructor<Pothos::BufferChunk, const size_t>()
+    .registerConstructor<Pothos::BufferChunk, const Pothos::DType &, const size_t>()
     .registerField(POTHOS_FCN_TUPLE(Pothos::BufferChunk, address))
     .registerField(POTHOS_FCN_TUPLE(Pothos::BufferChunk, length))
-    .registerMethod(POTHOS_FCN_TUPLE(Pothos::BufferChunk, append))
+    .registerField(POTHOS_FCN_TUPLE(Pothos::BufferChunk, dtype))
+    .registerStaticMethod(POTHOS_FCN_TUPLE(Pothos::BufferChunk, null))
     .registerMethod(POTHOS_FCN_TUPLE(Pothos::BufferChunk, elements))
+    .registerMethod(POTHOS_FCN_TUPLE(Pothos::BufferChunk, setElements))
+    .registerMethod(POTHOS_FCN_TUPLE(Pothos::BufferChunk, getAlias))
+    .registerMethod(POTHOS_FCN_TUPLE(Pothos::BufferChunk, getEnd))
+    .registerMethod(POTHOS_FCN_TUPLE(Pothos::BufferChunk, unique))
+    .registerMethod(POTHOS_FCN_TUPLE(Pothos::BufferChunk, useCount))
+    .registerMethod(POTHOS_FCN_TUPLE(Pothos::BufferChunk, clear))
+    .registerMethod(POTHOS_FCN_TUPLE(Pothos::BufferChunk, append))
     .commit("Pothos/BufferChunk");
 
 #include <Pothos/Object/Serialize.hpp>
